syntax = "proto3";

package NAlice.NIoT;

option go_package = "a.yandex-team.ru/alice/iot/bulbasaur/protos";

message SharingInfo {
    uint64 OwnerID = 1;
    string HouseholdID = 2;
}
